--- a/fn-validate/func.yaml
+++ b/fn-validate/func.yaml
@@ -1,7 +1,7 @@
 schema_version: 20180708
 name: sbom-validate
-version: 0.0.4
-runtime: python
+version: 0.0.6
+runtime: docker
 entrypoint: /python/bin/fdk /function/func.py handler
 memory: 256
 timeout: 30
