--- a/fn-validate/func.yaml
+++ b/fn-validate/func.yaml
@@ -1,7 +1,11 @@
 schema_version: 20180708
 name: sbom-validate
-version: 0.0.6
-runtime: docker
-entrypoint: /python/bin/fdk /function/func.py handler
+version: 0.0.8
+runtime: python
+build_image: fnproject/python:3.11-dev
+run_image: fnproject/python:3.11
+cmd: /python/bin/fdk /function/func.py handler
 memory: 256
 timeout: 30
+env:
+  PYTHONPATH: /python:$PYTHONPATH
